--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ matrix:
             - g++-8
             - cmake
             - libx11-dev libgl1-mesa-dev libglu1-mesa-dev libasound2-dev libgtk2.0-dev xorg-dev
+            - gtk+-3.0
       env:
          - MATRIX_EVAL="CC=clang-8 && CXX=clang++-8"
 
